--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "@react-spring/web": "^9.7.5",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-
+    "next": "^15.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
